# Containerus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  angular.json  package-lock.json  package.json  pnpm-lock.yaml  readme-build.md  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml  test.yml
docker/: Dockerfile.linux  Dockerfile.vnc-test  Dockerfile.windows
scripts/: build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-windows.sh  config.sh.template  release.sh  setup-android-sdk.sh  setup-macos-ios.sh
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credential_migration.rs  database.rs  keyring_store.rs  lib.rs  main.rs  state.rs
src-tauri/src/agent/: events.rs  executor.rs  mod.rs  pty_bridge.rs  rig_executor.rs  session.rs  summarizer.rs
src-tauri/src/agent/providers/: mod.rs
src-tauri/src/agent/safety/: classifier.rs  mod.rs
src-tauri/src/agent/tools/: definitions.rs  history_query.rs  mod.rs  shell_execute.rs  state_query.rs
src-tauri/src/ai/: anthropic.rs  azure.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  provider.rs  settings.rs
src-tauri/src/commands/: agent.rs  ai.rs  command_template.rs  container.rs  file_browser.rs  image.rs  mod.rs  network.rs  port_forward.rs  system.rs  terminal.rs  volume.rs
src-tauri/src/executor/: local.rs  mod.rs  remote.rs
src-tauri/src/models/: agent.rs  command_template.rs  container.rs  error.rs  file_browser.rs  image.rs  mod.rs  network.rs  port_forward.rs  system.rs  volume.rs
src-tauri/src/monitoring/: mod.rs
src-tauri/src/runtime/: builder.rs  mod.rs  parser.rs
src-tauri/src/ssh/: client.rs  config.rs  known_hosts.rs  mod.rs  pool.rs  port_forward.rs
src/app/: app.component.css  app.component.ts  app.config.ts  app.routes.ts
src/app/state/: ai-settings.state.spec.ts  ai-settings.state.ts  app.state.spec.ts  app.state.ts  block.state.spec.ts  block.state.ts  changelog.state.ts  command-template.state.spec.ts  command-template.state.ts  container.state.spec.ts  container.state.ts  file-browser.state.spec.ts  file-browser.state.ts  image.state.spec.ts  image.state.ts  network.state.spec.ts  network.state.ts  port-forward.state.spec.ts  port-forward.state.ts  system.state.spec.ts  system.state.ts  terminal.state.spec.ts  terminal.state.ts  toast.state.spec.ts  (+5 more)
(+173 files in other folders)
