[package]
name = "containerus"
version = "1.0.0-beta.5"
description = "Docker container management application"
authors = ["CreativDev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "containerus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-keychain = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures-util = "0.3"

# HTTP client (for llama-server API) - using rustls for Android compatibility
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# SSH
russh = "0.46"
russh-keys = "0.46"

# Utilities
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1.10"
once_cell = "1.18"
dirs = "5.0"
glob = "0.3"
base64 = "0.22"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Open URLs in browser
open = "5"

# AI/LLM - using rustls for Android compatibility
rig-core = { version = "0.28.0", default-features = false, features = ["reqwest-rustls"] }
tokio-stream = "0.1.18"
futures = "0.3.31"
schemars = "1.2.0"
whoami = "2.0.2"

# Terminal emulation for processing PTY output
vt100 = "0.15"

# Desktop-only dependencies (not available on Android)
[target.'cfg(not(target_os = "android"))'.dependencies]
# Credential storage (uses platform keychain APIs)
keyring = "2.0"
# Terminal PTY (Unix PTY not available on Android)
portable-pty = "0.8"
